# quant_studio_

./: .gitignore  DEPLOY.md  PRD v2.md  PRD.md  README.md  docker-compose.yml  domain_name.md  init-ssl.sh  main.py  nginx.conf  pyproject.toml  redeploy.sh
backend/: .dockerignore  Dockerfile  init_db.py  main.py  requirements.txt  scraper.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  ai_insight.py  quote.py  screener.py  stock.py  stock_alias.py  transaction.py  watchlist.py  zhihu.py
backend/app/routers/: __init__.py  ai.py  aliases.py  auth.py  progress.py  quotes.py  screeners.py  sentiment.py  stocks.py  sync.py  trades.py  transactions.py  watchlist.py
backend/app/schemas/: __init__.py  ai.py  progress.py  quote.py  screener.py  stock.py  transaction.py  watchlist.py  zhihu.py
backend/app/services/: __init__.py  ai_service.py  danger_label.py  position_calculator.py  screener_service.py
certbot/conf/renewal/: novamodeling.org.conf
docs/: sync-sqlite-to-postgres.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  nginx.conf.bak  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: utils.ts
frontend/src/pages/: AISettings.tsx  ArticleDetail.tsx  CreatorDetail.tsx  Creators.tsx  CreatorsManagement.tsx  DailyReview.tsx  DarePlay.tsx  (+13 more)
scripts/: crawler_zhihu.py  dedupe_articles.py  import_zhihu_data.py  merge_duplicate_creators.py  migrate_sqlite_to_postgres.py  sync_to_server.py  tag_articles.py  upload_to_server.py
(+45 files in other folders)
