[project]
name = "danginvest"
version = "1.0.0"
description = "DangInvest - Quantitative Investment Research with Sentiment Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.9",
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "parsel>=1.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
